--- a/server/package.json
+++ b/server/package.json
@@ -4,7 +4,7 @@
   "main": "index.js",
   "scripts": {
     "start": "nodemon index.js",
-    "dev": "nodemon server",
+    "dev": "nodemon index.js",
     "test": "mocha "
   },
   "keywords": [],
