Update config Vercel

--- a/server/.env
+++ b/server/.env
@@ -1,2 +1,2 @@
-dbURL=mongodb://127.0.0.1:27017/todo
+dbURL=mongodb+srv://yordanmilenov:0878884145@cluster0.bvf5cz1.mongodb.net/?retryWrites=true&w=majority
 PORT=5500
