--- a/server/package.json
+++ b/server/package.json
@@ -19,7 +19,8 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "mongoose": "^7.0.1",
-    "uuid": "^9.0.0"
+    "uuid": "^9.0.0",
+    "vercel": "^28.17.0"
   },
   "devDependencies": {
     "chai": "^4.3.7",
