--- a/server/package.json
+++ b/server/package.json
@@ -6,8 +6,8 @@
     "node": "18.x"
   },
   "scripts": {
-    "start": "node index.js",
-    "dev": "nodemon index.js",
+    "start": "node ./api/index.js",
+    "dev": "nodemon ./api/index.js",
     "test": "mocha "
   },
   "keywords": [],
